# snitch-svc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  go.mod  go.sum  main.go
.cursor/: base.mdc
.github/workflows/: ci.yml
internal/cli/: main.go
internal/config/: discord.go  main.go  telegram.go
internal/services/snitch/: main.go
scripts/: setup-hooks.sh
src/: config.rs  emoji.rs  events.rs  main.rs
src/discord/: handler.rs  mod.rs
src/telegram/: achievements.rs  format.rs  mod.rs  notifier.rs  service.rs  state.rs
